# ENEE428-OFDM-Project

./: Add_CP.c  Add_CP.h  CCS_Receiver_Main.txt  CCS_Transmitter_Main.txt  CMakeLists.txt  FFT.c  FFT.h  IFFT.c  IFFT.h  Remove_CP.c  Remove_CP.h  bit_detection.c  bit_detection.h  channel_estimator.c  channel_estimator.h  config.c  config.h  equalizer.c  equalizer.h  generate_sequence.c  generate_sequence.h  main.c  operations.c  operations.h  signal_power_estimation.c  signal_power_estimation.h  subcarrier_demapping.c  subcarrier_demapping.h  subcarrier_mapping.c  subcarrier_mapping.h  symbol_modulation.c  symbol_modulation.h  timing_acquisition.c  timing_acquisition.h
